# snappy-bureaucracy

./: .gitignore  README.md  snappy-bureaucracy.cabal  wrk.lua
src/: Application.hs  CompactThrift.hs  Site.hs
src-exec/: Main.hs
src/Bureaucracy/: Application.hs  Site.hs
src/Bureaucracy/Thrift/: CompactThrift.hs  LanguageThrift.hs  VarInt.hs
tests/: test.hs
thrift/: ChangeRecords.thrift  message.thrift
